# ghost-in-the-machine-

./: .gitignore  README.md  pyproject.toml
data/cleaned/: BLEAK_HOUSE_cleaned.txt  FRANKENSTEIN_cleaned.txt  GREAT_EXPECTATIONS_cleaned.txt  THE_LAST_MAN_cleaned.txt
data/raw/: BLEAK_HOUSE.txt  THE_LAST_MAN.txt
notebooks/: ghost_in_the_machine.ipynb
outputs/results/: bertopic_topics.pkl  feature_matrix.csv  model_comparison.csv  person_names.pkl  topic_names.pkl
report/: report.md
sop/: my_sop.txt
src/: data_utils.py  explainability.py  feature_extraction.py  genetic_algorithm.py  models.py
