[project]
name = "ghost-in-the-machine"
version = "0.1.0"
description = "NLP Authorship Detection — PreCog Lab, IIIT Hyderabad"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.8",
    "spacy>=3.7",
    "textstat",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.44",
    "gensim>=4.3",
    "torch>=2.1",
    "transformers>=4.37",
    "peft>=0.8",
    "captum>=0.7",
    "google-generativeai>=0.4",
    "python-dotenv",
    "bertopic>=0.16",
    "sentence-transformers>=2.6",
    "tqdm",
    "ipykernel",
    "jupyter",
]
